Fixed (some) validation
